# briefstock

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily-briefing.yml  deploy-oracle.yml
config/: providers.yaml  watchlist.yaml
deploy/oracle/: daily-stock-briefing.service  daily-stock-briefing.timer  run_daily_briefing.sh
docs/superpowers/plans/: 2026-04-24-daily-stock-briefing.md
docs/superpowers/specs/: 2026-04-24-daily-stock-briefing-design.md
reports/html/: sample-2026-04-24.html
scripts/: send_telegram_test.py
skills/daily-stock-briefing/: SKILL.md
src/daily_stock_briefing/domain/: enums.py  models.py
src/daily_stock_briefing/jobs/: run_daily_briefing.py
src/daily_stock_briefing/renderers/: chart_renderer.py  html_report.py  (+1 more)
src/press_release_collector/: main.py  requirements.txt
tests/: test_benchmark_display.py  test_chart_renderer.py  test_company_press_releases.py  test_config_loader.py  test_deploy_workflow.py  test_event_classifier.py  test_llm_adapter.py  test_logging_setup.py  test_models.py  test_news_dedupe.py  test_oracle_timer.py  test_packaging_smoke.py  test_press_release_collector_core.py  test_press_release_collector_main.py  test_press_release_collectors.py  test_research_links.py  test_run_daily_briefing.py  test_technical_indicators.py  test_telegram_renderer.py  test_wagn_holdings_enrichment.py  test_yellowbrick_enrichment.py  test_yellowbrick_readability_extract.py  test_yfinance_price_provider.py
tests/fixtures/: sample_filings.json  sample_news.json  sample_watchlist.yaml
(+37 files in other folders)
